--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask==2.3.2
-python-dotenv==1.0.0
-pydantic==1.10.2
-openai
-pydantic[email]
+certifi==2024.8.30
+numpy==2.1.3
+packaging==24.2
+pycairo==1.27.0
+pywatchman==2.0.0
+scipy==1.14.1
+wheel @ file:///opt/homebrew/Cellar/python%403.13/3.13.0_1/libexec/wheel-0.44.0-py3-none-any.whl#sha256=f49b82715dce6365f75eddcb0a9bb47d0d46feaf14bbc739dfcbd677b7073f5b
